# Templates

./: Writeup.docx
figures/: CMakeLists.txt
figures/include/utilities/math/: MathUtilities.h  MathUtilities.h.gch
figures/src/: a1-figures  main.cpp
figures/src/utilities/math/: MathUtilities.cpp
